--- a/src/components/Home/Header/Navbar/BurgerMenu/Controls/index.module.scss
+++ b/src/components/Home/Header/Navbar/BurgerMenu/Controls/index.module.scss
@@ -9,3 +9,11 @@
         justify-content: flex-start;
     }
 }
+
+.text {
+    text-transform: none !important;
+}
+
+.outlinedButton {
+    @include outlinedButton;
+}
