--- a/src/styles/colorPalette.scss
+++ b/src/styles/colorPalette.scss
@@ -2,6 +2,10 @@ $primaryYellow: #FFD742;
 $secondaryYellow: #FAE183;
 $tertiaryYellow: #ffc845;
 
+$primaryBlue: #2B86C0;
+
+$primaryRed: #C14400;
+
 $primaryOrange: #D4902C;
 $secondaryOrange: #EDBF15;
 
