--- a/src/pages/bulma-override.scss
+++ b/src/pages/bulma-override.scss
@@ -1,9 +1,9 @@
 @import '../styles';
-// Google Font
-@import url('https://fonts.googleapis.com/css?family=Poppins|Roboto&display=swap');
 
 // Update Bulma's global variables
 $family-sans-serif: 'Poppins', sans-serif;
+$family-primary: 'Poppins', sans-serif;
+$family-secondary: 'Montserrat', sans-serif;
 $grey-dark: $primaryGray;
 $grey-light: $lightGray;
 $primary: $primaryYellow;
@@ -12,9 +12,9 @@ $success: $activeGreen;
 $text: $primaryBrown;
 $danger: $errorRedSecondary;
 
-$size-1: 22px;
-$size-2: 16px;
-
 // Specyfic Overrides
 $navbar-item-img-max-height: 60px;
+$title-color: $text;
+$subtitle-color: $text;
+$text-color: $text;
 
