--- a/src/components/Home/Header/Navbar/index.module.scss
+++ b/src/components/Home/Header/Navbar/index.module.scss
@@ -4,22 +4,20 @@
     width: 100%;
     box-shadow: 0 3px 5px $lightGray2;
     transition: height .3s, width .3s;
-    padding: 0 5px;
 
     @include respond-to(medium) {
-        padding: 10px 5px;
-        box-shadow: 0 3px 5px $lightGray;
+        padding: 10px 0;
     }
 
     @include respond-to(large) {
         align-items: center !important;
         width: 1024px;
+        box-shadow: none;
     }
 
     @include respond-to(xLarge) {
         width: 1200px;
         height: 140px;
-        box-shadow: none;
     }
 
     @include respond-to(xxLarge) {
