--- a/src/components/Home/Header/Navbar/BurgerMenu/Controls/index.module.scss
+++ b/src/components/Home/Header/Navbar/BurgerMenu/Controls/index.module.scss
@@ -1,7 +1,7 @@
 @import '../../../../../../styles';
 
 .container {
-    display: flex;
+    display: flex !important;
     flex-direction: row;
     justify-content: center;
 
