--- a/src/components/Home/Header/HeroSection/index.module.scss
+++ b/src/components/Home/Header/HeroSection/index.module.scss
@@ -1,3 +1,9 @@
+@import '../../../../styles';
+
+.container {
+    @include sectionContainer;
+}
+
 .columns {
     max-width: 100vw;
     margin-top: 30px;
