feat: 🎸 restructure layout, implement FeaturedSection

--- a/src/components/Home/Body/HeroSection/HeroImage/index.module.scss
+++ b/src/components/Home/Body/HeroSection/HeroImage/index.module.scss
@@ -4,6 +4,8 @@
     &Text {
         margin-top: 5px;
         text-align: center;
+        
+        @include descriptionText;
         @include opaqueTextLight;
     }
 }
