--- a/src/styles/colorPalette.scss
+++ b/src/styles/colorPalette.scss
@@ -3,8 +3,10 @@ $secondaryYellow: #FAE183;
 $tertiaryYellow: #ffc845;
 
 $primaryBlue: #2B86C0;
+$backgroundBlue: rgba(43, 135, 192, 0.07);
 
 $primaryRed: #C14400;
+$backgroundRed: rgba(193, 68, 0, 0.07);
 
 $primaryOrange: #D4902C;
 $secondaryOrange: #EDBF15;
