--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -3,11 +3,15 @@
 // Layout
 @mixin sectionContainer {
     @include respond-to(small) {
-        padding: 20px;
+        padding: 2em;
     }
 
     @include respond-to(large) {
-        padding: 40px 60px;
+        padding: 4em 6em;
+    }
+
+    @include respond-to(xLargeBulma) {
+        padding: 6em 10em;
     }
 }
 
@@ -30,6 +34,14 @@
 @mixin opaqueTextLight {
     opacity: .7;
     font-weight: 400;
+}
+
+@mixin descriptionText {
+    font-size: .75rem;
+
+    @include respond-to(medium) {
+        font-size: .85rem;
+    }
 }
 
 // Inputs
