--- a/src/components/Home/Header/index.module.scss
+++ b/src/components/Home/Header/index.module.scss
@@ -5,4 +5,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    @include respond-to(large) {
+        border-bottom: 2px solid $lightGray2;
+    }
 }
