--- a/src/styles/colorPalette.scss
+++ b/src/styles/colorPalette.scss
@@ -8,6 +8,8 @@ $backgroundBlue: rgba(43, 135, 192, 0.07);
 $primaryRed: #C14400;
 $backgroundRed: rgba(193, 68, 0, 0.07);
 
+$backgroundCherry: #5a251a;
+
 $primaryOrange: #D4902C;
 $secondaryOrange: #EDBF15;
 
