refactor: 💡 implement reusable button in all instances

--- a/src/components/Home/Body/FeaturedSection/index.module.scss
+++ b/src/components/Home/Body/FeaturedSection/index.module.scss
@@ -1,6 +1,6 @@
 @import '../../../../styles';
 
 .container {
-    background-color: $backgroundBlue;
+    background-color: $lightGray2;
     @include sectionContainer;
 }
