--- a/src/components/CustomReusable/Button/index.module.scss
+++ b/src/components/CustomReusable/Button/index.module.scss
@@ -4,4 +4,5 @@
     color: $primaryBrown !important;
     transition: background .3s;
     font-weight: 500 !important;
+    border-width: 2px !important;
 }
