--- a/src/components/Home/Header/index.module.scss
+++ b/src/components/Home/Header/index.module.scss
@@ -5,6 +5,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative !important;
+    z-index: -1;
 
     @include respond-to(large) {
         border-bottom: 2px solid $lightGray2;
