--- a/src/components/Home/Body/CaseStudySection/VideoStart/index.module.scss
+++ b/src/components/Home/Body/CaseStudySection/VideoStart/index.module.scss
@@ -54,6 +54,7 @@
     }
 
     &Outer {
+        transition-timing-function: cubic-bezier(0,-2,0,2);
         width: 100%;
         height: 100%;
         opacity: .5;
@@ -69,7 +70,7 @@
     z-index: 4;
     top: 28.5%;
     left: 28.5%;
-    transition: all .6s cubic-bezier(.71,-1.65,0,1.93);
+    transition: all .6s cubic-bezier(.71,-2,0,2);
 
     @include respond-to(large) {
         top: 25.5%;
