feat: 🎸 implement statistics section

--- a/src/styles/colorPalette.scss
+++ b/src/styles/colorPalette.scss
@@ -9,6 +9,7 @@ $primaryRed: #C14400;
 $backgroundRed: rgba(193, 68, 0, 0.07);
 
 $backgroundCherry: #5a251a;
+$backgroundCherryRGB: rgb(90,37,26);
 $backgroundCherryLight: #e6a294;
 
 $primaryOrange: #D4902C;
