--- a/src/components/Home/Body/CaseStudySection/index.module.scss
+++ b/src/components/Home/Body/CaseStudySection/index.module.scss
@@ -4,6 +4,8 @@
     width: 100%;
     height: 150px;
     background-color: $lightGray2;
+    position: relative !important;
+    z-index: 1;
 
     @include respond-to(small) {
         height: 250px;
