--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,4 +1,4 @@
 @charset "utf-8";
 // If need, change your variables before importing Bulma
-@import './bulma-override.scss';
+@import './bulmaOverride.scss';
 @import "~bulma/bulma.sass";
